# today

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.zcode/plans/: plan-sess_4af5ee4c-423e-47cd-9a28-c678862989bb.md  plan-sess_e8557424-c68b-4cb7-8302-335ee6776272.md
docs/: PRD.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: AppHeader.tsx  AppNavigation.tsx  AppShell.tsx  OptionDrawer.tsx  ViewRouter.tsx
src/components/: DiaryView.tsx  FriendsView.tsx  HistoryView.tsx  MonthlyCalendar.tsx  ProfileView.tsx  TodayView.tsx
src/domain/: derive.ts  task.ts  types.ts
src/features/diary/: DiaryView.tsx
src/features/friends/: FriendsView.tsx
src/features/history/: HistoryView.tsx
src/features/profile/: ProfileView.tsx
src/features/today/: MonthlyCalendar.tsx  TodayView.tsx
src/hooks/: useCommitmentActivity.ts  useCommitmentRecords.ts  useCurrentStreak.ts  useWeeklyConsistency.ts
src/i18n/: I18nProvider.tsx  config.ts  index.ts
src/i18n/locales/: en.json  ja.json  ko.json
src/lib/: date.ts  language.ts  supabase.ts  theme.ts
src/lifecycle/hooks/: useToday.ts
src/lifecycle/providers/: AppProviders.tsx  LocaleProvider.tsx  (+2 more)
src/store/: useDiaryStore.ts  useFriendsStore.ts  useSettingsStore.ts  useTaskStore.ts  useTodoStore.ts  useUiStore.ts
supabase/: config.toml
supabase/migrations/: 20260714012151_init_core.sql  20260714032141_mvp_database.sql
tests/: i18n.test.ts  task.test.ts
(+1 files in other folders)
